--- a/Blog/Blog/Views/Blog/Create.cshtml
+++ b/Blog/Blog/Views/Blog/Create.cshtml
@@ -42,6 +42,10 @@
         </div>
 
         <div class="form-group">
+            @Html.HiddenFor(model => model.Date, new { @Value = DateTime.Now })
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Content, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Content, new { htmlAttributes = new { @class = "form-control" } })
