--- a/Blog/Blog/Views/Blog/Index.cshtml
+++ b/Blog/Blog/Views/Blog/Index.cshtml
@@ -49,6 +49,14 @@
                 </tr>
                 <tr>
                     <td>
+                        <label for="group">Group by:</label>
+                    </td>
+                    <td>
+                        @Html.DropDownList("group", "")
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <label for="comments">Minimum Comments:</label>
                     </td>
                     <td>
