--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                     <li class="selected">@Html.ActionLink("Home", "Index", "BlogGuests")</li>
                     <li class="selected">@Html.ActionLink("Blog", "Index", "Blog")</li>
                     <li class="selected">@Html.ActionLink("Fan Club", "Index", "FanClub")</li>
-                    <li><a href="#">Contact</a></li>
+                    <li class="selected">@Html.ActionLink("Map", "Index", "Map")</li>
                     <li class="limage">
                         <div id="transDemo2">
                             <div class="hover">
