--- a/Blog/Blog/Styles/base.css
+++ b/Blog/Blog/Styles/base.css
@@ -62,8 +62,8 @@ p {
 ------------------------------*/
 
 nav{
-    background-color:darkblue;
-    z-index: 10000;
+	background-color:darkblue;
+	z-index: 10000;
 }
 
 nav ul li.subscribe a {
@@ -108,12 +108,12 @@ a.navbar-brand{
 }
 
 .navbar-inverse{
-    background-color:darkblue;
-    z-index: 10000;
+	background-color:darkblue;
+	z-index: 10000;
 }
 
 .navbar-inverse .navbar-nav > li > a {
-    color: floralwhite;
+	color: floralwhite;
 }
 
 
@@ -192,6 +192,11 @@ a.navbar-brand{
 	border-radius: 5px;
 	box-shadow: 0 0 0 5px #ddd;
 	margin-left: 10px;
+}
+
+#search table {
+	width: 500px;
+	height:100%;
 }
 
 #search td label {
@@ -318,7 +323,7 @@ aside {
 	background: -o-linear-gradient(right, rgba(215,215,215,255), rgba(240,240,240,255)); /* For Opera 11.1 to 12.0 */
 	background: -moz-linear-gradient(right, rgba(215,215,215,255), rgba(240,240,240,255)); /* For Firefox 3.6 to 15 */
 	background: linear-gradient(to right, rgba(215,215,215,255) , rgba(240,240,240,255)); /* Standard syntax */
-       
+	   
  
 }
 
@@ -565,7 +570,15 @@ footer ul li a {
 	display: block;
 }
 
+p.blabla{
+	-webkit-column-count: 3; /* Chrome, Safari, Opera */
+	-moz-column-count: 3; /* Firefox */
+	column-count: 3;
+}
 
-	   
+#myMap{
+	width:100%;
+	height:300px;
+}	   
 
 
