--- a/Blog/Blog/Views/BlogGuests/Index.cshtml
+++ b/Blog/Blog/Views/BlogGuests/Index.cshtml
@@ -5,6 +5,8 @@
 }
 
 <audio controls autoplay><source src="~/music/song.mp3" type="audio/mpeg" controls="controls"></audio>
+<canvas id="myCanvas" width="10" height="10"></canvas>
+
 
 @if (!Model.Any())
 {
@@ -25,7 +27,7 @@ else
                     {
                         <img src="@item.Image" alt="Image" />
                     }
-                    <p>@Html.DisplayFor(modelItem => item.Content)</p>
+                    <p class="blabla">@Html.DisplayFor(modelItem => item.Content)</p>
 
                     @if (!String.IsNullOrEmpty(item.Video))
                     {
@@ -83,5 +85,8 @@ else
 
     }
 }
-
+@section scripts {
+    <script type="text/javascript" src="~/scripts/canvas.js"></script>
+   
+}
 
