--- a/Blog/Blog/Views/Comments/Index.cshtml
+++ b/Blog/Blog/Views/Comments/Index.cshtml
@@ -9,6 +9,56 @@
 }
 
 
+<section id="search">
+    <!-- Search -->
+    @using (Html.BeginForm())
+    {
+        <fieldset>
+            <legend>Search comments:</legend>
+            <table>
+                <tr>
+                    <td>
+                        <label for="date">Date Of Publish:</label>
+                    <td>
+                        <input type="date" name="date" id="date">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="postTitle">Title:</label>
+                    </td>
+                    <td>
+                        @Html.DropDownList("commentTitle", "All")
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="postAuthor">Author:</label>
+                    </td>
+                    <td>
+                        @Html.DropDownList("commentAuthor", "All")
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="words">Words in comment:</label>
+                    </td>
+                    <td>
+                        @Html.TextBox("words", "", new { placeholder = "Enter words from the comment" })
+                    </td>
+                </tr>
+                
+                <tr>
+                    <td class="submit" colspan="2">
+                        <input type="submit" value="Search">
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
+    }
+</section>
+
+
 <section id="comments">
     <h3 id= @ViewBag.postName>Comments for @ViewBag.postName:</h3>
     @if (ViewBag.commentsCount != 0)
@@ -22,6 +72,7 @@
                     <time>@Html.DisplayFor(modelItem => comment.Date) </time>
                 </header>
                 <p>@Html.DisplayFor(modelItem => comment.Content)</p>
+                @Html.ActionLink("Edit", "Edit", new { id = comment.CommentID }, new { @class = "link" })
                 @Html.ActionLink("Delete", "Delete", new { id = comment.CommentID }, new { @class = "link" })
             </article>
         }
