--- a/Blog/Blog/Views/FanClub/Index.cshtml
+++ b/Blog/Blog/Views/FanClub/Index.cshtml
@@ -9,6 +9,64 @@
     ViewBag.Title = "Fan Club List";
 }
 
+<section id="search">
+    <!-- Search -->
+    @using (Html.BeginForm())
+    {
+        <fieldset>
+            <legend>Search fans:</legend>
+            <table>
+                <tr>
+                    <td>
+                        <label for="date">Birth Date:</label>
+                    <td>
+                        <input type="date" name="date" id="date">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="firstName">First Name:</label>
+                    </td>
+                    <td>
+                        @Html.DropDownList("firstName", "All")
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="lastName">Last Name:</label>
+                    </td>
+                    <td>
+                        @Html.DropDownList("lastName", "All")
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="gender">Gender:</label>
+                    </td>
+                    <td>
+                        @Html.DropDownList("gender", "All")
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <label for="seniority">Seniority:</label>
+                    </td>
+                    <td>
+                        <input type="range" name="seniority" id="seniority" min="0" max="50" value="0" onchange="showValue(this.value)">
+                        <span id="range">0</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="submit" colspan="2">
+                        <input type="submit" value="Search">
+                    </td>
+                </tr>
+            </table>
+        </fieldset>
+    }
+</section>
+
+
 <h2 id="FanClubTitle">Shauli Fans:</h2>
 
 <table class="table">
@@ -69,3 +127,7 @@
 <p>
     @Html.ActionLink("Add New Fan", "Create", null, new { @class = "link" })
 </p>
+
+@section scripts {
+    <script type="text/javascript" src="~/scripts/funcs.js"></script>
+}
