--- a/Blog/Blog/Views/Shared/Error.cshtml
+++ b/Blog/Blog/Views/Shared/Error.cshtml
@@ -4,25 +4,23 @@
     ViewBag.Title = "Error";
 }
 @section head {
-    @Styles.Render("~/Styles/blog.css")
+    @Styles.Render("~/Styles/comments.css")
 }
 
 @{
     if ((ViewBag.ErrorMsg != null))
     {
-        <h2 id="BlogTitle">
+        <h2 id="CommentsTitle">
             Error: @ViewBag.ErrorMsg
         </h2>
     }
     else
     {
-        <h2 id="BlogTitle">
+        <h2 id="CommentsTitle">
             Error
         </h2>
     }
 }
 
-<p>
-    @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
-</p>
+
 
