--- a/Blog/Blog/Styles/base.css
+++ b/Blog/Blog/Styles/base.css
@@ -581,4 +581,20 @@ p.blabla{
 	height:300px;
 }	   
 
+p.weather {
+    
+    width:300px;
+    color:darkgreen;
+    background: lightblue; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, lightblue, yellow); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, lightblue, yellow); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, lightblue, yellow); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, lightblue, yellow); /* Standard syntax */
+}
 
+p.weather span.wh{
+    font-size:24px;
+    text-decoration:underline;
+    color:blue;
+    
+}
