--- a/Blog/Blog/Views/FanClub/Details.cshtml
+++ b/Blog/Blog/Views/FanClub/Details.cshtml
@@ -6,7 +6,7 @@
 @section head {
     @Styles.Render("~/Styles/FanClub.css")
 }
-<h2 id="FanClubTitle">Details</h2>
+<h2 id="FanClubTitle">Fan Details</h2>
 
 <div>
     <table class="table-horizontal">
