--- a/Blog/Blog/Views/Account/Delete.cshtml
+++ b/Blog/Blog/Views/Account/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Blog.Models.Map
+﻿@model Blog.Models.Manager
 
 @{
     ViewBag.Title = "Delete";
@@ -6,22 +6,23 @@
 @section head {
     @Styles.Render("~/Styles/blog.css")
 }
-<h2 id="BlogTitle">Are you sure you want to delete this location?</h2>
+<h2 id="BlogTitle">Are you sure you want to delete this  Manager:</h2>
 
 <div>
     <table class="table-horizontal">
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Address)</th>
-            <td>@Html.DisplayFor(model => model.Address)</td>
+            <th>@Html.DisplayNameFor(model => model.Name)</th>
+            <td>@Html.DisplayFor(model => model.Name)</td>
         </tr>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Lat)</th>
-            <td>@Html.DisplayFor(model => model.Lat)</td>
+            <th>@Html.DisplayNameFor(model => model.LastName)</th>
+            <td>@Html.DisplayFor(model => model.LastName)</td>
         </tr>
         <tr>
-            <th>@Html.DisplayNameFor(model => model.Lng)</th>
-            <td>@Html.DisplayFor(model => model.Lng)</td>
+            <th>@Html.DisplayNameFor(model => model.UserName)</th>
+            <td>@Html.DisplayFor(model => model.UserName)</td>
         </tr>
+       
     </table>
 
     @using (Html.BeginForm())
@@ -35,3 +36,5 @@
     }
 </div>
 
+
+   
