--- a/Blog/Blog/Views/Map/Details.cshtml
+++ b/Blog/Blog/Views/Map/Details.cshtml
@@ -3,40 +3,31 @@
 @{
     ViewBag.Title = "Details";
 }
-
-<h2>Details</h2>
+@section head {
+    @Styles.Render("~/Styles/blog.css")
+}
+<h2 id="BlogTitle">Location Details</h2>
 
 <div>
-    <h4>Map</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Address)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Address)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Lat)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Lat)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Lng)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Lng)
-        </dd>
-
-    </dl>
+    <table class="table-horizontal">
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Address)</th>
+            <td>@Html.DisplayFor(model => model.Address)</td>
+        </tr>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Lat)</th>
+            <td>@Html.DisplayFor(model => model.Lat)</td>
+        </tr>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.Lng)</th>
+            <td>@Html.DisplayFor(model => model.Lng)</td>
+        </tr>
+    </table>
 </div>
+
+
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }, new { @class = "link" })
+    @Html.ActionLink("Delete", "Delete", new { id = Model.ID }, new { @class = "link" })
 </p>
