--- a/Blog/Blog/Views/Map/Edit.cshtml
+++ b/Blog/Blog/Views/Map/Edit.cshtml
@@ -3,16 +3,16 @@
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
+@section head {
+    @Styles.Render("~/Styles/blog.css")
+}
+<h2 id="BlogTitle">Edit location</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Map</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
 
@@ -48,6 +48,10 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+<p>
+    @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
+</p>
+
+@section scripts {
+    <script type="text/javascript" src="~/scripts/funcs.js"></script>
+}
