--- a/Blog/Blog/Views/Map/Index.cshtml
+++ b/Blog/Blog/Views/Map/Index.cshtml
@@ -3,8 +3,11 @@
 @{
     ViewBag.Title = "Index";
 }
+@section head {
+    @Styles.Render("~/Styles/blog.css")
+}
 <p>
-    @Html.ActionLink("Shauli Sightings", "Locations")
+    @Html.ActionLink("Shauli Sightings", "Locations", null, new { @class = "link" })
 </p>
 
 
@@ -50,45 +53,54 @@
     }
 </section>
 
-
-
-<h2>Addresses:</h2>
+<h2 id="BlogTitle">Addresses:</h2>
 
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Address)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Lat)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Lng)
-        </th>
-        <th></th>
-    </tr>
+    @if (!Model.Any())
+    {
+        <tr><td>There are no posts found</td></tr>
+    }
+    else
+    {
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.Address)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Lat)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Lng)
+            </th>
+            <th></th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Lat)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Lng)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ID })
-        </td>
-    </tr>
-}
-
+    foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Lat)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Lng)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.ID }, new { @class = "link" }) 
+                @Html.ActionLink("Details", "Details", new { id = item.ID }, new { @class = "link" }) 
+                @Html.ActionLink("Delete", "Delete", new { id = item.ID }, new { @class = "link" })
+            </td>
+        </tr>
+    }
+    }
 </table>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New", "Create", null, new { @class = "link" })
 </p>
+
+@section scripts {
+    <script type="text/javascript" src="~/scripts/funcs.js"></script>
+}
