--- a/Blog/Blog/Views/Account/Details.cshtml
+++ b/Blog/Blog/Views/Account/Details.cshtml
@@ -32,6 +32,6 @@
 
 <p>
     @Html.ActionLink("Back to List", "Index", null, new { @class = "link" })
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) 
+    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }, new { @class = "link" }) 
     @Html.ActionLink("Delete", "Delete", new { id = Model.ID }, new { @class = "link" })   
 </p>
