--- a/Blog/Blog/Views/Map/Locations.cshtml
+++ b/Blog/Blog/Views/Map/Locations.cshtml
@@ -51,7 +51,7 @@
                         position: latLng1,
                         map: map,
                         animation: google.maps.Animation.BOUNCE,
-                        url: "images/shauli.png",
+                        icon: "/images/shauli.png",
                         size: new google.maps.Size(55, 55)
                     });
                     marker1.setMap(map);
