--- a/Blog/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Blog/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="subscribe"><a href="#">Subscribe via. RSS</a></li>
+                    <li class="subscribe">@Html.ActionLink("Join-Group", "JoinGroup", "BlogGuests")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     @if (Session["ID"] != null)
