--- a/Blog/Blog/Views/Account/Register.cshtml
+++ b/Blog/Blog/Views/Account/Register.cshtml
@@ -7,19 +7,17 @@
     @Styles.Render("~/Styles/blog.css")
 }
 <h2 id="BlogTitle">Add new manager:</h2>
-
+@if (ViewBag.usrcpy != null)
+{
+    <h4 style="color:red">@ViewBag.usrcpy</h4>
+}
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @if(ViewBag.Message != null)
-        {
-            <div class="form-group">
-                <div class="col-md-10">@ViewBag.Message</div>
-            </div>
-        }
+       
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
